@@ -39,9 +39,6 @@ void DataReaderListenerImpl::on_data_available(DDS::DataReader_ptr reader)
 
     if (status == DDS::RETCODE_OK) {
 
-      cout << "SampleInfo.sample_rank = " << si.sample_rank << endl;
-      cout << "SampleInfo.instance_state = " << si.instance_state << endl;
-
       if (si.valid_data == 1)
       {
         cout << "Message: subject    = " << message.subject.in() << endl
